...
                                            </constraints>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" hint="double tap to edit value" identifier="focusIntervalSetting">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                                            </constraints>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" hint="double tap to edit value" identifier="breakIntervalSetting">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="15 min" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSiz
                                                    <rect key="frame" x="309" y="11" width="50" height="22"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
...
                                            </constraints>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" hint="double tap to edit value" identifier="longBreakIntervalSetting">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                                            </constraints>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" hint="double tap to edit value" identifier="cycleForLongBreakSetting">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Y00-je-u9i">
                                                    <rect key="frame" x="312" y="7" width="51" height="30"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="neverSleepSwitch"/>
                                                    <connections>
                                                        <action selector="switchToggled:" destination="rZW-di-Plg" eventType="valueChanged" id="nhG-P0-Cp6"/>
...
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="agZ-sm-nEh">
                                                    <rect key="frame" x="312" y="11.5" width="51" height="31"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="enhancedFocusModeSwitch"/>
                                                    <connections>
                                                        <action selector="switchToggled:" destination="qRG-N8-Xf6" eventType="valueChanged" id="6dI-X9-VVr"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="55" height="33"/>
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                <state key="normal" title="Cancel"/>
                                                <connections>
                                                    <action selector="cancelButtonClicked:" destination="vZM-ox-4fB" eventType="touchUpInside" id="3f1-5J-Qhj"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JeV-RZ-02j">
                                                <rect key="frame" x="263" y="0.0" width="42" height="33"/>
                                                <accessibility key="accessibilityConfiguration" identifier="done button"/>
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                <state key="normal" title="Done"/>
...
